--- a/portfolio/assignment-3/css/style.css
+++ b/portfolio/assignment-3/css/style.css
@@ -25,7 +25,7 @@ html {
 /* Mobile First CSS: we'll design for phone sizes first, then add media queries for tablets and desktop computers later */
 
 body {
-    background-color:maroon;
+    background-color: black;
 	
 }
 
@@ -36,7 +36,6 @@ body {
 /* CSS for header */
 header{
     background-color: black;
-    
 }
 header h1{
     font-family: var(--lobster-font);
@@ -44,6 +43,8 @@ header h1{
     padding: 1.5rem;
     color: white;
     border: 0.5rem groove gold;
+    margin: 0;
+
 }
 header h3{
     color:white;
@@ -74,6 +75,7 @@ header h3{
 }
 .menu:hover{
     border: 0.5rem solid gray;
+    background-color: red;
 }
 .menu figure{
     margin: 0 auto;
@@ -101,23 +103,22 @@ header h3{
 }
 
 /* CSS for Info */
-.info-section{
+#info{
     display: flex;
-    justify-content: space-evenly;
-}
-.info-background{
-    padding: 5rem;
+    width: 100%;
 
-    /* max-width: 15rem; */
-    /* width: 100%; */
-    max-width: 5rem;
-    background-color: red;
+    border-top: 1rem groove gold;
+    border-bottom: 1rem groove gold;
 }
-.info-container{
-    display: block;
-    width: 50%;
-}
+.info-section{
+    color: white;
+    background-color: black;
 
+    padding: 1rem;
+
+    max-width: 50%;
+    width: 100%;
+}
 
 /* Class for making YouTube/Vimeo videos responsive */
 
@@ -158,7 +159,9 @@ You can adjust the min-width numbers below, and add as many new media queries as
 
 /* Minimum width for iPads and tablets.  */
 @media all and (min-width: 481px) {
-	
+	body{
+        background-color: maroon;
+    }
 	
 	
 	
