--- a/portfolio/assignment-3/css/style.css
+++ b/portfolio/assignment-3/css/style.css
@@ -142,6 +142,14 @@ header h3{
     background-image: var(--radio-change-state);
 }
 
+#radio-border{
+    width: 100%;
+    height: 5rem;
+    background-color: black;
+
+    border-top: 1rem groove gold;
+    border-bottom: 1rem groove gold;
+}
 
 /* Class for making YouTube/Vimeo videos responsive */
 
