Added Footer + CSS

--- a/portfolio/assignment-3/css/page1-scotch.css
+++ b/portfolio/assignment-3/css/page1-scotch.css
@@ -130,7 +130,12 @@ nav a:hover{
 
     background-color: darkgray;
 }
-
+footer{
+    margin: 5rem 0;
+    font: 0.2rem;
+    text-align: center;
+    background-color: gold;
+}
 
 
 
