--- a/portfolio/assignment-4/css/style.css
+++ b/portfolio/assignment-4/css/style.css
@@ -37,6 +37,19 @@ header{
 
     align-items: center;
 }
+
+#header-title{
+    font-family: 'Roboto Mono'  ;
+}
+
+
+
+/* CSS for nav */
+#nav-container{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+}
 #nav-drop-button{
     background-image: url(../img/nav-icon.png);
     background-repeat: no-repeat;
@@ -45,12 +58,69 @@ header{
     width: 5rem;
     height: 5rem;
 }
-#header-title{
-    font-family: 'Roboto Mono';
+#nav-drop-button:hover{
+    transform: rotate(90deg);
 }
+#nav-drop-button:hover + nav{
+    transform:scaleY(100%)
+}
+nav:hover{
+    transform:scaleY(100%)
+}
+nav:hover + #nav-drop-button{
+    transform: rotate(90deg);
+}
+
+
+nav{
+    border: 0.5rem solid gray;
+    background-color:darkgray;
+    max-width: 10rem;
+    /* When nav is closed */
+    transform: scaleY(0%);
+}
+nav h3{
+    text-align: center;
+    background-color: whitesmoke;
+
+    margin-top: 0;
+    padding: 0 1rem;
+
+    max-width: 100%;
+}
+nav ul{
+    width: 100%;
+
+    padding-left: 0;
+    margin-left: 0;
+    list-style: none;
+    text-align:center;
+
+}
+nav ul li{
+    margin: 2rem 0;
+}
+nav a{
+    background-color: gainsboro;
+    padding: 0.5rem 1.6rem;
+    border: 0.5rem solid black;
+    max-width: 100%;
+
+    text-decoration: none;
+    color: black
+}
+nav a:hover{
+    background-color: black;
+    border-color: gainsboro;
+    color: gainsboro;
+}
+
+
 
 /* CSS for image-boxes */
 #image-boxes-container{
+    margin-top: 5rem;
+
     display: flex;
     flex-wrap: wrap;
 
@@ -68,7 +138,9 @@ header{
 
     font-size: 1.5rem;
 }
-
+#cookies-n-cream-box figcaption{
+    font-size: 1rem;
+}
 
 
 /* Class for making YouTube/Vimeo videos responsive */
